# discogs-etl

./: .coveragerc  .env.example  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  wxyc-etl-pin.txt
.github/: dependabot.yml
.github/workflows/: charset-corpus-drift.yml  ci.yml  deploy-ephemeral-rebuild.yml  rebuild-cache.yml  sync-library.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_backfill_trigram_indexes.py  0003_wxyc_library_v2.py  0004_wxyc_identity_match_fns.py  0005_release_track_artist_role.py  0006_lookup_negative.py  0007_wxyc_postgres_image_gate.py  0008_release_artwork_checked_at.py  0009_cache_metadata_unique.py  0009_cache_metadata_unique_release_id.py  0010_release_not_found.py  0011_artist_not_found.py  0012_entity_release_identity.py  0013_adopt_entity_identity.py
docs/: architecture.md  automation.md  discogs-etl-technical-overview.md  ec2-rebuild-runbook.md  migrations-runbook.md  migrations.md  observability.md  pg-tuning-runbook.md  plan-223-wxyc-unaccent-railway-fix.md  plan-298-empty-child-index-recovery.md  test-fixtures.md  testing.md  topup-artwork-runbook.md
infra/ephemeral-rebuild/: README.md  provision-secrets.sh  samconfig.toml  template.yaml
lib/: alembic_helpers.py  catalog_source.py  pg_concurrent_ddl.py  pg_text.py  pipeline_state.py  unaccent_codegen.py
loaders/: __init__.py  wxyc.py
schema/: create_database.sql  create_functions.sql  create_indexes.sql  create_track_indexes.sql  drop_core_tables.sql
scripts/: cache_health_metrics.py  check_cache_drift.py  dedup_releases.py  enrich_library_artists.py  export_to_sqlite.py  extract_library_labels.py  filter_csv.py  import_csv.py  rebuild-cache-bootstrap.sh  rebuild-cache.sh  resolve_collisions.py  run_pipeline.py  sync-library.sh  topup_artwork.py  tsv_to_sqlite.py  verify_cache.py  wxyc_library_explain_analyze.py  wxyc_library_parity_check.py
tests/: conftest.py
tests/e2e/: test_discogs_pipeline_e2e.py  test_entity_resolution_e2e.py  test_pipeline.py  test_rust_fuzzy_e2e.py  test_sync_library_e2e.py
tests/fixtures/: create_fixtures.py  library.db
tests/integration/: conftest.py  test_alembic_0007_image_gate.py  test_alembic_0008_artwork_checked_at.py  test_alembic_0009_cache_metadata_unique.py  test_alembic_0010_release_not_found.py  test_alembic_0011_artist_not_found.py  test_alembic_0012_entity_release_identity.py  test_alembic_0013_adopt_entity_identity.py  test_alembic_backfill_trigram_indexes.py  test_alembic_baseline.py  test_alembic_lookup_negative.py  test_cache_health_metrics.py  test_catalog_source.py  test_charset_torture_pg_cache.py  test_connection_resilience.py  test_copy_swap_preserves_not_null.py  test_copy_to_target.py  test_dedup.py  test_enrich_library_artists.py  test_error_resilience.py  test_import.py  test_prune.py  test_rebuild_idempotent.py  test_schema.py  test_state_resume_old_format.py  test_topup_artwork.py  test_tsv_to_sqlite.py  test_unlogged_tables.py  test_verify_cache.py  test_verify_cache_columns.py  test_verify_cache_concurrent_lml_writes.py  test_wxyc_identity_match_parity.py  test_wxyc_library_v2.py  test_wxyc_library_v2_full_cache.py
tests/unit/: test_alembic_helpers.py  test_artist_splitting.py  test_bootstrap_ordering.py  test_cache_health_metrics.py  test_catalog_source.py  test_characterization_new_imports.py  test_charset_torture_sqlite_build.py  test_check_cache_drift.py  test_csv_to_tsv.py  test_dedup_fk_race.py  test_enrich_library_artists.py  test_ephemeral_rebuild_launcher.py  test_ephemeral_rebuild_sweeper.py  test_export.py  test_extract_library_labels.py  test_fallback_paths.py  test_filter_csv.py  test_fix_csv_newlines.py  test_fk_not_valid_pin.py  test_fuzzy_parity.py  test_import_csv.py  test_import_csv_rust.py  test_logger_init.py  test_matching.py  test_pg_concurrent_ddl.py  test_pg_text.py  (+16 more)
(+5 files in other folders)
