[project]
name = "discogs-cache"
version = "0.1.0"
description = "ETL pipeline for building a WXYC Discogs cache database"
requires-python = ">=3.9"
dependencies = [
    "psycopg[binary]>=3.1.0",
    "asyncpg>=0.29.0",
    "rapidfuzz>=3.0.0",
    "wxyc-etl>=0.1.0",
    "wxyc-catalog>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (needs library.db)",
    "postgres: marks tests that need a PostgreSQL database",
    "e2e: full pipeline end-to-end test",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "parity: old vs new implementation comparison",
]
addopts = "-m 'not integration and not postgres and not e2e and not slow and not parity'"
testpaths = ["tests"]
