[project]
name = "discogs-cache"
version = "0.1.0"
description = "ETL pipeline for building a WXYC Discogs cache database"
requires-python = ">=3.9"
dependencies = [
    "psycopg[binary]>=3.1.0",
    "asyncpg>=0.29.0",
    "rapidfuzz>=3.0.0",
    "wxyc-etl>=0.2.0",
    "wxyc-catalog>=0.1.1",
    "sentry-sdk>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
    "alembic>=1.13",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long
]

[tool.pytest.ini_options]
# ci-sync-skip: slow reason: perf benchmarks are run manually on demand, not in CI
markers = [
    "pg: needs a PostgreSQL service (DATABASE_URL_TEST)",
    "slow: takes longer than ~10s (orthogonal to infra)",
]
addopts = "-m 'not pg and not slow'"
testpaths = ["tests"]
